// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`param instruction compiler > registers a float64 function parameter 1`] = `
{
  "currentFunctionParameterCount": 1,
  "locals": {
    "x": {
      "index": 0,
      "isFloat64": true,
      "isInteger": false,
    },
  },
}
`;

exports[`param instruction compiler > registers a function parameter 1`] = `
{
  "currentFunctionParameterCount": 1,
  "locals": {
    "value": {
      "index": 0,
      "isInteger": true,
    },
  },
}
`;
